# genai_engineering

./: .env.example  .gitignore  README.md  embedding_example.ipynb  langchain_basic_orchestration.ipynb  langchain_foundation.ipynb  lcel_demo_one.ipynb  limits_and_penalities.ipynb  llm_maintaining_state_and_streaming.ipynb  pydantic_demo_one.ipynb  pyproject.toml  requirements.txt
agentic/: langgraph_agentic_ex1.ipynb  langgraph_simple_multi_agent.ipynb
data_processing/: 01_data_cleaning_noise_removal.ipynb  02_normalization_missing_bias.ipynb  03_tokenization_labeling_splitting.ipynb  basic_data_processing.ipynb  preprocessed_dataset.json
docs/: LangChain_Basics.docx  TuneVsRag.docx
docs/images/: lcel-architecture.html  llm_pipeline_diagram.html  peft_lab_diagram.html  peft_tl_diagram.html  temperature_topp_explorer.html
evaluation/: automated_evaluation.ipynb  bias_and_safety.ipynb  deep_eval_one.ipynb
evaluation/.deepeval/: .deepeval_telemetry.txt
fine_tuning/: 01_transfer_learning.ipynb  02_peft_techniques.ipynb  03_comparison_workflow.ipynb
genai_fundamentals/: llm_maintaining_state_and_streaming.ipynb  temperature_and_top_p.ipynb
langchain/: basic_rag_with_charts.ipynb  callback_with_streaming.ipynb  langchain_basic_orchestration.ipynb  langchain_foundation.ipynb  model_chaining.ipynb  retriever_example.ipynb
langchain/lcel/: lcel_demo_one.ipynb  (+2 more)
lcel/: lcel_demo_two_research_pipeline.ipynb
pydantic/: pydantic_basics.ipynb  pydantic_demo_one.ipynb
tools/: multi_step_chained_reasoning.ipynb  single_tool_invocation_with_validation.ipynb
